--- a/l10n/po/ja_JP/_includes/support-help-band.html.po
+++ b/l10n/po/ja_JP/_includes/support-help-band.html.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-02 19:14+0000\n"
-"PO-Revision-Date: 2021-03-26 21:11+0900\n"
+"PO-Revision-Date: 2021-12-03 22:42+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Content of: <div><div><h3>
 #: upstream/_includes/support-help-band.html:3
@@ -49,28 +49,24 @@ msgstr "<p><a href=\"https://stackoverflow.com/questions/tagged/quarkus\">Stack 
 
 #. type: Content of: <div><div><img><h4>
 #: upstream/_includes/support-help-band.html:17
-#, fuzzy
 msgid "Discussions and Collaboration"
 msgstr "議論とコラボレーション"
 
 #. type: Content of: <div><div><img><p>
 #: upstream/_includes/support-help-band.html:18
-#, fuzzy
 msgid "Check out our <a href=\"https://github.com/quarkusio/quarkus/discussions\">GitHub Discussions</a> collaboration area to interact with other Quarkus users and developers."
-msgstr "他のQuarkusユーザーや開発者と交流するために、&lt;a href=\"https://github.com/quarkusio/quarkus/discussions\"&gt;GitHub Discussions&lt;/a&gt;のコラボレーションエリアをご覧ください。"
+msgstr "他のQuarkusユーザーや開発者と交流するために、a href=\"https://github.com/quarkusio/quarkus/discussions\">GitHub Discussions</a>のコラボレーションエリアをご覧ください。"
 
 #. type: Content of: <div><div><img><h4>
 #: upstream/_includes/support-help-band.html:22
-#, fuzzy
 msgid "Quarkus Development"
-msgstr "クォークス・ディベロップメント"
+msgstr "Quarkus 開発"
 
 #. type: Content of: <div><div><img><p>
 #: upstream/_includes/support-help-band.html:23
-#, fuzzy
 #| msgid "We also have a dedicated mailing list to discuss the development of Quarkus. Join the group via <a href=\"mailto:quarkus-dev+subscribe@googlegroups.com\">email</a> or by visiting the <a href=\"https://groups.google.com/d/forum/quarkus-dev\">quarkus-dev Google Groups page</a>."
 msgid "Discuss the development of Quarkus with the team in the <a href=\"mailto:quarkus-dev+subscribe@googlegroups.com\">development mailing list </a> or by <a href=\"https://quarkusio.zulipchat.com/\">Zulip Chat</a>."
-msgstr "Quarkusの開発の議論専用のメーリングリストもあります。<a href=\"mailto:quarkus-dev+subscribe@googlegroups.com\">email</a>するか、<a href=\"https://groups.google.com/d/forum/quarkus-dev\">Google Groupsページ</a>にアクセスしてグループに参加してください。"
+msgstr "<a href=\"mailto:quarkus-dev+subscribe@googlegroups.com\">開発メーリングリスト</a> か<a href=\"https://quarkusio.zulipchat.com/\">Zulip Chat</a>でチームとQuarkus開発について議論してください。"
 
 #~ msgid "Live Chat"
 #~ msgstr "ライブチャット"
