--- a/l10n/po/ja_JP/books.md.po
+++ b/l10n/po/ja_JP/books.md.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 11:16+0000\n"
-"PO-Revision-Date: 2021-12-03 19:10+0900\n"
+"PO-Revision-Date: 2021-12-03 22:22+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja_JP\n"
@@ -32,7 +32,7 @@ msgstr ""
 #: upstream/books.md:1
 #, no-wrap
 msgid "Browse through these selections of new Quarkus related books and resources to expand your knowledge and hone your coding skills to step up your Quarkus game."
-msgstr ""
+msgstr "選りすぐりの新しいQuarkus関連書籍、リソースを読み、知識を広げ、コーディングスキルを磨いてQuarkusへの取組を強化して下さい。"
 
 #. type: YAML Front Matter: title
 #: upstream/books.md:1
