Add machine translation

--- a/l10n/po/ja_JP/_data/getstarted-guides.yaml.po
+++ b/l10n/po/ja_JP/_data/getstarted-guides.yaml.po
@@ -17,89 +17,89 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. type: Hash Value - Key: headline
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Guides"
-msgstr ""
+msgstr "ガイド"
 
 #. type: Hash Value - Key: cta_linktext
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Read the Guide"
-msgstr ""
+msgstr "ガイドを読む"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Learn how to create, package, and deploy a Hello World Quarkus application including a JAX-RS endpoint and functional tests."
-msgstr ""
+msgstr "JAX-RSエンドポイントと機能テストを含むHello World Quarkusアプリケーションの作成、パッケージ化、展開の方法を学びます。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://quarkus.io/guides/getting-started"
-msgstr ""
+msgstr "https://quarkus.io/guides/getting-started"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Write Your First Application"
-msgstr ""
+msgstr "最初のアプリケーションを書く"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Learn how to create a reactive application with Quarkus and explore the different features offered by Quarkus."
-msgstr ""
+msgstr "Quarkusでリアクティブアプリケーションを作成する方法を学び、Quarkusが提供するさまざまな機能を探求します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://quarkus.io/guides/getting-started-reactive"
-msgstr ""
+msgstr "https://quarkus.io/guides/getting-started-reactive"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Getting Started with Reactive"
-msgstr ""
+msgstr "リアクティブを始めよう"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Create a portable Java API to write serverless functions deployable to AWS Lambda, Azure Functions, Knative, and more."
-msgstr ""
+msgstr "AWS Lambda、Azure Functions、Knativeなどにデプロイ可能なサーバーレス関数を書くためのポータブルなJava APIを作成します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://quarkus.io/guides/funqy"
-msgstr ""
+msgstr "https://quarkus.io/guides/funqy"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Start with Serverless"
-msgstr ""
+msgstr "サーバーレスで始める"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Use the Quarkus Spring Data REST compatibility layer to create a sample CRUD application."
-msgstr ""
+msgstr "Quarkus Spring Data REST互換レイヤーを使用して、サンプルCRUDアプリケーションを作成します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://quarkus.io/guides/spring-data-rest"
-msgstr ""
+msgstr "https://quarkus.io/guides/spring-data-rest"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Write a Spring Data Application"
-msgstr ""
+msgstr "Spring Dataアプリケーションの作成"
 
 #. type: Hash Value - Key: secondarycta
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Want to learn more? Check out the <a href='https://quarkus.io/guides/'>guides</a> to continue your journey"
-msgstr ""
+msgstr "もっと詳しく知りたいですか？あなたの旅を続けるために、&lt;a href='https://quarkus.io/guides/'&gt;guides&lt;/a&gt;をチェックしてください。"
