--- a/l10n/po/ja_JP/_data/getstarted-videos.yaml.po
+++ b/l10n/po/ja_JP/_data/getstarted-videos.yaml.po
@@ -17,126 +17,126 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. type: Hash Value - Key: headline
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Videos"
-msgstr ""
+msgstr "ビデオ"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Gunnar Morling"
-msgstr ""
+msgstr "ガンナー・モーリング"
 
 #. type: Hash Value - Key: date
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "November 19, 2019"
-msgstr ""
+msgstr "2019年11月19日"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Use Quarkus to build a Kafka Streams Application."
-msgstr ""
+msgstr "Quarkusを使用してKafka Streamsアプリケーションを構築します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://www.youtube.com/watch?v=qDThVyuAMMk"
-msgstr ""
+msgstr "https://www.youtube.com/watch?v=qDThVyuAMMk"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kafka Streams with Quarkus"
-msgstr ""
+msgstr "Quarkusを使ったKafka Streams"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Burr Sutter, Georgios Andrianakis"
-msgstr ""
+msgstr "バー・サッター、ゲオルギオス・アンドリアナキス"
 
 #. type: Hash Value - Key: date
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "December 6, 2019"
-msgstr ""
+msgstr "2019年12月6日"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Create a microservice using your favorite Spring API."
-msgstr ""
+msgstr "お好きなSpring APIを使ってマイクロサービスを作成します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://www.youtube.com/watch?v=s05fBX1gEIw&t=1s"
-msgstr ""
+msgstr "https://www.youtube.com/watch?v=s05fBX1gEIw&amp;t=1s"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kubernetes-native Spring Apps on Quarkus"
-msgstr ""
+msgstr "QuarkusのKubernetesネイティブなSpringアプリ"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Daniel Oh"
-msgstr ""
+msgstr "ダニエル・オー"
 
 #. type: Hash Value - Key: date
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "May 2, 2019"
-msgstr ""
+msgstr "2019年5月2日"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Build and deploy a native Quarkus application to Kubernetes."
-msgstr ""
+msgstr "ネイティブなQuarkusアプリケーションを構築し、Kubernetesに展開します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://www.youtube.com/watch?v=Qh9vxBoGlcQ"
-msgstr ""
+msgstr "https://www.youtube.com/watch?v=Qh9vxBoGlcQ"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus on Kubernetes"
-msgstr ""
+msgstr "Quarkus on Kubernetes"
 
 #. type: Hash Value - Key: authors
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "David Kwon"
-msgstr ""
+msgstr "David Kwon"
 
 #. type: Hash Value - Key: date
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "September 24, 2019"
-msgstr ""
+msgstr "2019年9月24日"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Learn Quarkus basics by standing up a straightforward application serving a hello endpoint."
-msgstr ""
+msgstr "Helloエンドポイントを提供する簡単なアプリケーションを立ち上げて、Quarkusの基本を学びます。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://www.youtube.com/watch?v=S3X2GMWcf_Q"
-msgstr ""
+msgstr "https://www.youtube.com/watch?v=S3X2GMWcf_Q"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Visual Studio Code Extension For Quarkus"
-msgstr ""
+msgstr "QuarkusのVisual Studio Code Extension"
