--- a/l10n/po/ja_JP/_data/getstarted-nextsteps.yaml.po
+++ b/l10n/po/ja_JP/_data/getstarted-nextsteps.yaml.po
@@ -17,143 +17,143 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. type: Hash Value - Key: headline
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Next Steps"
-msgstr ""
+msgstr "次のステップ"
 
 #. type: Hash Value - Key: cta_linktext
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Read the Guide"
-msgstr ""
+msgstr "ガイドを読む"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Build native executables with GraalVM or Mandrel."
-msgstr ""
+msgstr "GraalVMやMandrelでネイティブな実行ファイルをビルドします。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/building-native-image"
-msgstr ""
+msgstr "/ガイド／ネイティブ・イメージの構築"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Building Native Executables"
-msgstr ""
+msgstr "ネイティブな実行ファイルの構築"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Learn how to use continuous testing in your Quarkus Application."
-msgstr ""
+msgstr "Quarkusアプリケーションで継続的テストを使用する方法について説明します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/continuous-testing"
-msgstr ""
+msgstr "/ガイド/継続的なテスト"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Continuous Testing"
-msgstr ""
+msgstr "継続的なテスト"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Create a portable Java API to write serverless functions deployable to AWS Lambda, Azure Functions, Knative, and more."
-msgstr ""
+msgstr "AWS Lambda、Azure Functions、Knativeなどにデプロイ可能なサーバーレス関数を書くためのポータブルなJava APIを作成します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/funqy"
-msgstr ""
+msgstr "/guides/funqy"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Start with Serverless"
-msgstr ""
+msgstr "サーバーレスで始める"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Every developer has their favorite IDE. Learn how to use Quarkus in yours."
-msgstr ""
+msgstr "開発者にはお気に入りのIDEがあります。あなたのIDEでQuarkusを使う方法をご紹介します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/ide-tooling"
-msgstr ""
+msgstr "/ガイドブック/ガイドツール"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus Tools in Your Favorite IDE"
-msgstr ""
+msgstr "お気に入りのIDEでQuarkusツールを使う"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Hibernate ORM REST Data with Panache simplifies the creation of CRUD applications based on JAX-RS and Hibernate ORM."
-msgstr ""
+msgstr "Hibernate ORM REST Data with Panacheは、JAX-RSとHibernate ORMをベースにしたCRUDアプリケーションの作成を簡素化します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/rest-data-panache"
-msgstr ""
+msgstr "/ガイド/レストデータ・パナッシュ"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Writing Simple REST CRUD Services"
-msgstr ""
+msgstr "シンプルなREST CRUDサービスの作成"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Learn more about developing reactive applications with Quarkus."
-msgstr ""
+msgstr "Quarkusを使ったリアクティブアプリケーションの開発については、こちらをご覧ください。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/getting-started-reactive"
-msgstr ""
+msgstr "/ガイダンス/スタートアップ・リアクティブ"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Getting Started with Reactive"
-msgstr ""
+msgstr "リアクティブを始めよう"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "This guide covers how to deploy a native application on Kubernetes."
-msgstr ""
+msgstr "このガイドでは、Kubernetes上でネイティブアプリケーションを展開する方法について説明します。"
 
 #. type: Hash Value - Key: link
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/deploying-to-kubernetes"
-msgstr ""
+msgstr "/ガイド/デプロイメント-トゥ-Kubernetes"
 
 #. type: Hash Value - Key: title
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Deploying Quarkus Applications on Kubernetes"
-msgstr ""
+msgstr "QuarkusアプリケーションをKubernetesで展開する"
 
 #. type: Hash Value - Key: secondarycta
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Want to learn more? Check out the <a href='/guides/'>guides</a> to continue your journey."
-msgstr ""
+msgstr "もっと詳しく知りたいですか？あなたの旅を続けるために、&lt;a href='/guides/'&gt;guides&lt;/a&gt;をチェックしてください。"
