--- a/l10n/po/ja_JP/_includes/faq.html.po
+++ b/l10n/po/ja_JP/_includes/faq.html.po
@@ -18,155 +18,186 @@ msgstr ""
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:4
+#, fuzzy
 msgid "What is your license?"
-msgstr ""
+msgstr "あなたのライセンスは何ですか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:5
+#, fuzzy
 msgid "Quarkus is an Open Source project licensed under the <a href=\"https://www.apache.org/licenses/LICENSE-2.0\">Apache License version 2.0</a>."
-msgstr ""
+msgstr "Quarkusは、&lt;a href=\"https://www.apache.org/licenses/LICENSE-2.0\"&gt;Apache License version 2.0&lt;/a&gt;の下でライセンスされたオープンソースプロジェクトです。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:6
+#, fuzzy
 msgid "Where can I get it?"
-msgstr ""
+msgstr "どこで入手できますか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:7
+#, fuzzy
 msgid "Quarkus is published in Maven Central, check out <a href=\"/extensions\">which extensions</a> you need and just import them in your <code>pom.xml</code> to get Quarkus. We recommend you start your Quarkus experience via our <a href=\"/get-started\">Getting Started guides</a>."
-msgstr ""
+msgstr "QuarkusはMaven Centralで公開されています。&lt;a href=\"/extensions\"&gt;どのエクステンションが必要か&lt;/a&gt;を確認し、&lt;code&gt;pom.xml&lt;/code&gt;でインポートするだけでQuarkusを利用できます。&lt;a href=\"/get-started\"&gt;入門ガイド&lt;/a&gt;からQuarkusの使用を始めることをお勧めします。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:8
+#, fuzzy
 msgid "Quarkus is stable?"
-msgstr ""
+msgstr "Quarkusは安定していますか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:9
+#, fuzzy
 msgid "Yes, we consider Quarkus stable. Remember 95% of the features Quarkus apps use are provided by the ecosystem like Hibernate ORM, Eclipse Vert.x, Netty, RESTEasy, etc. These libraries are rock solid :)"
-msgstr ""
+msgstr "はい、Quarkusは安定していると考えています。Quarkusアプリが使用している機能の95％は、Hibernate ORM、Eclipse Vert.x、Netty、RESTEasyなどのエコシステムによって提供されていることを覚えておいてください。これらのライブラリはしっかりしています。）"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:10
+#, fuzzy
 msgid "You can go to <a href=\"https://code.quarkus.io/\">code.quarkus.io</a> to see if a particular extension is <em>stable</em> (default) or <em>preview</em>."
-msgstr ""
+msgstr "&lt;a href=\"https://code.quarkus.io/\"&gt;code.quarkus.io&lt;/a&gt;に行けば、特定の拡張機能が&lt;em&gt;stable&lt;/em&gt;（デフォルト）なのか&lt;em&gt;preview&lt;/em&gt;なのかを確認することができます。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:11
+#, fuzzy
 msgid "What is a Quarkus extension?"
-msgstr ""
+msgstr "Quarkusの拡張機能とは何ですか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:12
+#, fuzzy
 msgid "One of the main goals of Quarkus is ease of extensibility and to build a vibrant ecosystem."
-msgstr ""
+msgstr "Quarkusの主な目標の1つは、拡張性を容易にし、活気あるエコシステムを構築することです。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:13
+#, fuzzy
 msgid "Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a framework or technology into your Quarkus application. They also do all of the heavy lifting of providing the right information to GraalVM for your application to compile natively. This will allow 3rd party projects to easily take advantage of the work we have done to make it easier to target GraalVM."
-msgstr ""
+msgstr "Quarkusのエクステンションは、プロジェクトの依存関係と考えてください。エクステンションは、フレームワークやテクノロジーの設定、起動、Quarkusアプリケーションへの統合を行います。また、エクステンションは、アプリケーションがネイティブにコンパイルされるように、GraalVMに正しい情報を提供するためのすべての作業を行います。これにより、サードパーティのプロジェクトは、GraalVMをターゲットにしやすくするために我々が行った作業を簡単に利用することができます。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:14
+#, fuzzy
 msgid "What are the extension statuses?"
-msgstr ""
+msgstr "拡張子の状態はどうなっていますか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:15
+#, fuzzy
 msgid "Extensions have a various degree of maturity when they enter the Quarkus ecosystem. A status offers the expectations you can rely on."
-msgstr ""
+msgstr "エクステンションは、Quarkusのエコシステムに入った時点で、さまざまな成熟度を持っています。ステータスは、信頼できる期待値を提供します。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:16
+#, fuzzy
 msgid "<strong>Stable</strong>: backward compatibility and presence in the ecosystem are taken very seriously. An application can safely rely on these extensions. Extensions not marked as preview or experimental (the majority) are stable."
-msgstr ""
+msgstr "&lt;strong&gt;Stable&lt;/strong&gt;: 後方互換性とエコシステムでの存在を非常に重視しています。アプリケーションは、これらの拡張機能に安全に依存することができます。プレビューやエクスペリメンタルとしてマークされていない拡張機能(大部分)は安定しています。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:17
+#, fuzzy
 msgid "<strong>Preview</strong>: backward compatibility and presence in the ecosystem is not guaranteed. Specific improvements might require to change configuration or APIs and plans to become <em>stable</em> are under way. Such extensions are in the middle of their maturation process."
-msgstr ""
+msgstr "&lt;strong&gt;Preview&lt;/strong&gt;: 後方互換性やエコシステムでの存在は保証されていません。具体的な改善には、構成やAPIの変更が必要になる場合があり、&lt;em&gt;安定&lt;/em&gt;するための計画が進行中です。このような拡張機能は、成熟過程の真っ只中にあります。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:18
+#, fuzzy
 msgid "<strong>Experimental</strong>: early feedback is requested to mature the idea. There is no guarantee of stability nor long term presence in the platform until the solution matures. Such extensions are at the beginning of their maturation process."
-msgstr ""
+msgstr "&lt;strong&gt;実験的&lt;/strong&gt;：アイデアを成熟させるために、初期のフィードバックが求められます。ソリューションが成熟するまでは、プラットフォームの安定性や長期的な存在を保証するものではありません。このような拡張機能は、その成熟過程の初期段階にあります。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:19
+#, fuzzy
 msgid "You can find the extension status on <a href=\"https://code.quarkus.io\">code.quarkus.io</a> or in the extension <a href=\"/guides/\">guides</a>."
-msgstr ""
+msgstr "拡張機能のステータスは、&lt;a href=\"https://code.quarkus.io\"&gt;code.quarkus.io&lt;/a&gt;や、拡張機能の&lt;a href=\"/guides/\"&gt;guides&lt;/a&gt;で確認できます。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:20
+#, fuzzy
 msgid "Will the Quarkus team accept my extension?"
-msgstr ""
+msgstr "Quarkusチームは私の延長を受け入れてくれますか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:21
+#, fuzzy
 msgid "Oh yeah! We had quite a few extensions written outside the Quarkus \"initial\" team."
-msgstr ""
+msgstr "そうですね。Quarkusの「初期」チーム以外で書かれた拡張機能もかなりありました。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:22
+#, fuzzy
 msgid "Quarkus is an open ecosystem and we hope to see all the extensions people need to write their apps. We are working as we speak to allow an extension to be published in separate repos and separate GAVs and thus published in Maven repos independently of Quarkus core. This will greatly simplify the publication process. Expect news soon."
-msgstr ""
+msgstr "Quarkusはオープンなエコシステムであり、人々がアプリを書くために必要なすべての拡張機能を見たいと思っています。現在、拡張機能を別のリポジトリや別のGAVで公開し、Quarkusコアとは別にMavenリポジトリで公開できるように取り組んでいます。これにより、公開プロセスが大幅に簡素化されます。近いうちにニュースをお届けします。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:23
+#, fuzzy
 msgid "The one current restriction is that extensions should work in both OpenJDK and GraalVM native executables. That is the guarantee we give Quarkus users (a cross compilation for their app). We have a maturity model to improve an extension to be fully \"Quarked\" and benefit from Quarkus, all done in incremental steps. Just hop on our <a href=\"https://quarkus.io/community/#discussions\">mailing list</a> to discuss your ideas and get help. And you can start reading our <a href=\"https://quarkus.io/guides/writing-extensions\">Writing extensions guide</a> as well or more simply get inspiration from the <a href=\"https://github.com/quarkusio/quarkus/tree/master/extensions\">existing ones</a>."
-msgstr ""
+msgstr "現在の制限としては、拡張機能はOpenJDKとGraalVMの両方のネイティブ実行ファイルで動作する必要があります。これは、Quarkusのユーザーに与える保証です（アプリのクロスコンパイル）。拡張機能を完全に「Quarked」にしてQuarkusの恩恵を受けられるように改善するための成熟度モデルがあり、すべては段階的に行われます。私たちの&lt;a href=\"https://quarkus.io/community/#discussions\"&gt;メーリングリスト&lt;/a&gt;に参加して、アイデアを話し合ったり、助けを求めたりしてください。また、&lt;a href=\"https://quarkus.io/guides/writing-extensions\"&gt;ライティングエクステンションガイド&lt;/a&gt;を読み始めることもできますし、&lt;a href=\"https://github.com/quarkusio/quarkus/tree/master/extensions\"&gt;既存のエクステンション&lt;/a&gt;からインスピレーションを得ることもできます。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:24
+#, fuzzy
 msgid "What is GraalVM?"
-msgstr ""
+msgstr "GraalVMとは？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:25
+#, fuzzy
 msgid "<a href=\"https://www.graalvm.org\">GraalVM</a> is a universal virtual machine for running applications written in various different languages, as well as providing the ability to compile JVM bytecode to a native executable (this native executable runs a special virtual machine called SubstrateVM). These native executables start much faster and can use a lot less memory than a traditional JVM, however not every JVM feature is supported, and some are more limited than normal."
-msgstr ""
+msgstr "&lt;a href=\"https://www.graalvm.org\"&gt;GraalVM&lt;/a&gt;は、様々な言語で書かれたアプリケーションを実行するためのユニバーサルな仮想マシンであり、JVMバイトコードをネイティブな実行ファイルにコンパイルする機能も提供しています（このネイティブな実行ファイルはSubstrateVMと呼ばれる特別な仮想マシンを実行します）。これらのネイティブ実行ファイルは、従来のJVMよりもはるかに高速に起動し、メモリ使用量も大幅に削減できますが、すべてのJVM機能がサポートされているわけではなく、通常よりも制限されているものもあります。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:26
+#, fuzzy
 msgid "For example by default reflection in GraalVM will not work, unless a class/member has been explicitly registered for reflection. This is normally achieved by listing every class, method, field and constructor in a JSON file, and passing this as a parameter into the native image build. This obviously gets quite cumbersome for all but the most trivial projects. Quarkus provides a framework that makes it easy to work around these annotations, and programmatically determine what should be registered."
-msgstr ""
+msgstr "例えば、GraalVMのデフォルトのリフレクションは、クラス/メンバーが明示的にリフレクション用に登録されていない限り、動作しません。これは通常、すべてのクラス、メソッド、フィールド、コンストラクタをJSONファイルにリストアップし、これをネイティブ・イメージ・ビルドのパラメータとして渡すことで実現されます。これは、ごく些細なプロジェクトを除いては、明らかに非常に面倒です。Quarkusは、これらのアノテーションを簡単に回避し、何を登録すべきかをプログラムで決定するためのフレームワークを提供します。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:27
+#, fuzzy
 msgid "How do you unify imperative and reactive programming?"
-msgstr ""
+msgstr "命令型と反応型のプログラミングをどのように統一するのか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:28
+#, fuzzy
 msgid "<a href=\"/vision/continuum\">Learn more</a>."
-msgstr ""
+msgstr "&lt;a href=\"/vision/continuum\"&gt;詳しくはこちら&lt;/a&gt;をご覧ください。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:29
+#, fuzzy
 msgid "What does Container First mean?"
-msgstr ""
+msgstr "コンテナファーストとは何か？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:30
+#, fuzzy
 msgid "<a href=\"/vision/container-first\">Learn more</a>."
-msgstr ""
+msgstr "&lt;a href=\"/vision/container-first\"&gt;詳しくはこちら&lt;/a&gt;をご覧ください。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:31
+#, fuzzy
 msgid "What is your view on standards?"
-msgstr ""
+msgstr "規格についてはどのようにお考えですか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:32
+#, fuzzy
 msgid "<a href=\"/vision/standards\">Learn more</a>."
-msgstr ""
+msgstr "&lt;a href=\"/vision/standards\"&gt;詳しくはこちら&lt;/a&gt;をご覧ください。"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/faq.html:33
+#, fuzzy
 msgid "What are you doing to improve developer joy?"
-msgstr ""
+msgstr "開発者の喜びを高めるために、どのような工夫をしていますか？"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:34
+#, fuzzy
 msgid "<a href=\"/vision/developer-joy\">Learn more</a>."
-msgstr ""
+msgstr "&lt;a href=\"/vision/developer-joy\"&gt;詳しくはこちら&lt;/a&gt;をご覧ください。"
