Add some translations

--- a/l10n/po/ja_JP/_includes/discussion.html.po
+++ b/l10n/po/ja_JP/_includes/discussion.html.po
@@ -3,69 +3,60 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 01:46+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 23:15+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Content of: <div><div><div><H3>
 #: upstream/_includes/discussion.html:4
-#, fuzzy
 msgid "Quarkus's Colaborative Community Forum"
-msgstr "Quarkus's Colaborative Community Forum (英語)"
+msgstr "Quarkusの協調的なコミュニティフォーラム"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/discussion.html:5
-#, fuzzy
 msgid "The core foundation of every good open source project is open discussion and collaboration. Quarkus is committed to this belief. We've enabled GitHub Discussions so the community can have open communication. This gives a focal point for the community to ask and answer questions regarding the project. This means all of that great knowledge can be shared and is discoverable. Additionally, other conversations about the Quarkus Community can be had there as well. Come collaborate with us."
 msgstr "すべての優れたオープンソースプロジェクトの中核となる基盤は、オープンな議論とコラボレーションです。Quarkusはこの信念を貫いています。コミュニティがオープンにコミュニケーションできるように、GitHub Discussionsを有効にしています。これにより、コミュニティがプロジェクトに関する質問をしたり、回答したりするための中心となる場所ができました。これは、すべての素晴らしい知識が共有され、発見できることを意味しています。さらに、Quarkusコミュニティに関するその他の会話もここで行うことができます。私たちと一緒にコラボレーションしましょう。"
 
 #. type: Content of: <div><div><div><h4>
 #: upstream/_includes/discussion.html:6
-#, fuzzy
 msgid "<a href=\"https://github.com/quarkusio/quarkus/discussions\">Go to the Quarkus GitHub Discussions<i class=\"fas fa-external-link-alt\"></i></a>"
-msgstr "&lt;a href=\"https://github.com/quarkusio/quarkus/discussions\"&gt;Quarkus GitHub Discussionsへ&lt;i class=\"fas fa-external-link-alt\"&gt;&lt;/i&gt; &lt;/i&gt;。"
+msgstr "<a href=\"https://github.com/quarkusio/quarkus/discussions\">Quarkus GitHub Discussionsへ移動<i class=\"fas fa-external-link-alt\"></i></a>"
 
 #. type: Content of: <div><div><div><H3>
 #: upstream/_includes/discussion.html:9
-#, fuzzy
 msgid "Quarkus Chat Options"
 msgstr "Quarkusのチャットオプション"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/discussion.html:10
-#, fuzzy
 msgid "For usage questions, we recommend to:"
-msgstr "使い方に関する質問は、こちらをご覧ください。"
+msgstr "使い方に関する質問は、こちら:"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/discussion.html:12
-#, fuzzy
 msgid "Ask on <a href=\"https://stackoverflow.com/questions/tagged/quarkus\">Stack Overflow with the <code>quarkus</code> tag</a>"
-msgstr "&lt;a href=\"https://stackoverflow.com/questions/tagged/quarkus\"&gt;Stack Overflow with &lt;code&gt;quarkus&lt;/code&gt; tag&lt;/a&gt;について質問します。"
+msgstr "<a href=\"https://stackoverflow.com/questions/tagged/quarkus\">Stack Overflow で<code>quarkus</code> タグ</a>付きで質問"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/discussion.html:14
-#, fuzzy
 msgid "For questions related to the development of Quarkus:"
-msgstr "Quarkusの開発に関するご質問にお答えします。"
+msgstr "Quarkusの開発に関する質問は、こちら:"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/discussion.html:16
-#, fuzzy
 msgid "The <a href=\"https://groups.google.com/d/forum/quarkus-dev\" target=\"_blank\">quarkus-dev Google Groups</a>"
-msgstr "&lt;a href=\"https://groups.google.com/d/forum/quarkus-dev\" target=\"_blank\"&gt;quarkus-dev Google Groups&lt;/a&gt;。"
+msgstr "<a href=\"https://groups.google.com/d/forum/quarkus-dev\" target=\"_blank\">quarkus-dev Google グループ</a>"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/discussion.html:17
-#, fuzzy
 msgid "Chat using <a href=\"https://quarkusio.zulipchat.com/#narrow/stream/187038-dev\" target=\"_blank\">Zulip</a> (<code>#dev</code> stream)"
-msgstr "&lt;a href=\"https://quarkusio.zulipchat.com/#narrow/stream/187038-dev\" target=\"_blank\"&gt;Zulip&lt;/a&gt;を使ったチャット（&lt;code&gt;#dev&lt;/code&gt;ストリーム）。"
+msgstr "<a href=\"https://quarkusio.zulipchat.com/#narrow/stream/187038-dev\" target=\"_blank\">Zulip</a>でチャット (<code>#dev</code> stream)"
