--- a/l10n/po/ja_JP/support.md.po
+++ b/l10n/po/ja_JP/support.md.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 13:15+0000\n"
-"PO-Revision-Date: 2021-12-03 21:21+0900\n"
+"PO-Revision-Date: 2021-12-03 23:07+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja_JP\n"
@@ -32,4 +32,4 @@ msgstr ""
 #: upstream/support.md:1
 #, no-wrap
 msgid "Support When You Need It."
-msgstr "随時サポートします。"
+msgstr "必要に応じたサポート"
