--- a/l10n/po/ja_JP/_includes/discussion.html.po
+++ b/l10n/po/ja_JP/_includes/discussion.html.po
@@ -6,19 +6,21 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-03 01:46+0000\n"
+"POT-Creation-Date: 2021-12-03 15:14+0000\n"
 "PO-Revision-Date: 2021-12-03 23:15+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 3.0\n"
 
 #. type: Content of: <div><div><div><H3>
 #: upstream/_includes/discussion.html:4
-msgid "Quarkus's Colaborative Community Forum"
+#, fuzzy
+#| msgid "Quarkus's Colaborative Community Forum"
+msgid "Quarkus's Collaborative Community Forum"
 msgstr "Quarkusの協調的なコミュニティフォーラム"
 
 #. type: Content of: <div><div><div><p>
