Add some translations

--- a/l10n/po/ja_JP/_includes/header-navigation.html.po
+++ b/l10n/po/ja_JP/_includes/header-navigation.html.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 07:12+0000\n"
-"PO-Revision-Date: 2021-12-03 14:59+0900\n"
+"PO-Revision-Date: 2021-12-04 00:15+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -40,7 +40,7 @@ msgstr "<label class=\"nav-toggle\" for=\"checkbox\"> <i class=\"fa fa-bars\"></
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:15
 msgid "<span href=\"{{site.baseurl}}/about/\">About <i class=\"fas fa-chevron-down\"></i></span>"
-msgstr "<span href=\"{{site.baseurl}}/about/\">Quarkustとは <i class=\"fas fa-chevron-down\"></i></span>"
+msgstr "<span href=\"{{site.baseurl}}/about/\">Quarkusとは <i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:17
