--- a/l10n/po/ja_JP/_includes/homepage-features-icon-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-features-icon-band.html.po
@@ -44,7 +44,7 @@ msgstr "慣れ親しんだ命令型のコードとリアクティブなスタイ
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/homepage-features-icon-band.html:20
 msgid "<a href=\"/standards\">Community and Standards</a>"
-msgstr "<a href=\"/standards\">コミュニティと標準規格</a>"
+msgstr "<a href=\"/standards\">コミュニティと標準仕様</a>"
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/homepage-features-icon-band.html:21
