--- a/l10n/po/ja_JP/_includes/standards.html.po
+++ b/l10n/po/ja_JP/_includes/standards.html.po
@@ -19,7 +19,7 @@ msgstr ""
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/standards.html:7
 msgid "We don’t want you to spend hours learning new technologies. Instead, the Quarkus programming model builds on top of proven standards. Be it official standards such as Eclipse MicroProfile or leading frameworks in a specific domain such as Eclipse Vert.x."
-msgstr "Quarkusでは、新しい技術の習得に何時間も費やす必要はありません。その代わり、Quarkusのプログラミングモデルは、実績のある標準規格の上に構築されています。それは、Eclipse MicroProfileのような公式の標準であったり、Eclipse Vert.xのような特定の領域における主要なフレームワークであったりします。"
+msgstr "Quarkusでは、新しい技術の習得に何時間も費やす必要はありません。その代わり、Quarkusのプログラミングモデルは、実績のある標準仕様の上に構築されています。それは、Eclipse MicroProfileのような公式の標準であったり、Eclipse Vert.xのような特定の領域における主要なフレームワークであったりします。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/standards.html:8
@@ -29,4 +29,4 @@ msgstr "我々の依存性注入ソリューションは、CDIに基づいてい
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/standards.html:9
 msgid "Since we’re not limited to standards we can go beyond and extend your possibilities. Of course, Quarkus is not a passive consumer. Our goal is to improve and innovate the technologies we use and contribute back to the open source projects and standards we rely on."
-msgstr "標準規格に縛られていないので、超えて可能性を広げることができます。もちろん、Quarkusは受動的な消費者ではありません。Quarkusの目標は、使用しているテクノロジーを改善して革新し、信頼しているオープンソースプロジェクトや標準規格に貢献することです。"
+msgstr "標準仕様に縛られていないので、超えて可能性を広げることができます。もちろん、Quarkusは受動的な消費者ではありません。Quarkusの目標は、使用しているテクノロジーを改善して革新し、信頼しているオープンソースプロジェクトや標準仕様に貢献することです。"
