--- a/l10n/po/ja_JP/_posts/2021-02-02-getting-started-amqp.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-02-getting-started-amqp.adoc.po
@@ -45,7 +45,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-02-02-getting-started-amqp.adoc:13
 msgid "https://www.amqp.org/[AMQP 1.0] is a standard for passing messages between applications or organizations.  It connects systems, feeds business processes with the information they need, and reliably handles communication between systems.  AMQP is a robust and mature protocol widely used in event-driven applications."
-msgstr "link:https://www.amqp.org/[AMQP 1.0] は、アプリケーションや組織間でメッセージを渡すための標準規格です。AMQP はシステムを接続し、ビジネスプロセスに必要な情報を供給し、システム間の通信を確実に処理します。AMQP は、イベント駆動型のアプリケーションで広く使用されている堅牢で成熟したプロトコルです。"
+msgstr "link:https://www.amqp.org/[AMQP 1.0] は、アプリケーションや組織間でメッセージを渡すための標準仕様です。AMQP はシステムを接続し、ビジネスプロセスに必要な情報を供給し、システム間の通信を確実に処理します。AMQP は、イベント駆動型のアプリケーションで広く使用されている堅牢で成熟したプロトコルです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-02-getting-started-amqp.adoc:17
