--- a/l10n/po/ja_JP/_guides/topic/standards.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/standards.adoc.po
@@ -43,7 +43,7 @@ msgstr "{project-name} - 標準に対するスタンス"
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:16
 msgid "Let's go to the quark of things.  We don't want you to spend hours learning new technologies.  Instead, {project-name} provides leading frameworks and technologies from open source projects, such as https://vertx.io[Vert.x], https://camel.apache.org[Camel], http://hibernate.org[Hibernate] and https://resteasy.github.io[RESTEasy]. You can also find innovative community projects, such as https://smallrye.io[SmallRye]. If you are looking for standards you can find https://microprofile.io[MicroProfile] and selected specifications from https://jakarta.ee[Jakarta EE]."
-msgstr "物事の核心に迫りましょう。私たちは、新しい技術の習得に何時間も費やしてほしくありません。その代わり、{project-name} では、 link:https://vertx.io[Vert.x]、 link:https://camel.apache.org[Camel]、 link:http://hibernate.org[Hibernate]、 link:https://resteasy.github.io[RESTEasy]などのオープンソースプロジェクトの主要なフレームワークや技術を提供しています。また、 link:https://smallrye.io[SmallRye]のような革新的なコミュニティプロジェクトもあります。標準規格を探している場合は、 link:https://jakarta.ee[Jakarta EE]の link:https://microprofile.io[MicroProfile] や選りすぐりの仕様を見つけることができます。"
+msgstr "物事の核心に迫りましょう。私たちは、新しい技術の習得に何時間も費やしてほしくありません。その代わり、{project-name} では、 link:https://vertx.io[Vert.x]、 link:https://camel.apache.org[Camel]、 link:http://hibernate.org[Hibernate]、 link:https://resteasy.github.io[RESTEasy]などのオープンソースプロジェクトの主要なフレームワークや技術を提供しています。また、 link:https://smallrye.io[SmallRye]のような革新的なコミュニティプロジェクトもあります。標準仕様を探している場合は、 link:https://jakarta.ee[Jakarta EE]の link:https://microprofile.io[MicroProfile] や選りすぐりの仕様を見つけることができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:18
