--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -214,6 +214,7 @@ l10n/po/ja_JP/_guides/README.adoc.po, 75, 76, 306, 307 ,1%
 l10n/po/ja_JP/_guides/smallrye-kafka-outgoing.adoc.po, 79, 79, 861, 861 ,0%
 l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po, 98, 98, 1177, 1177 ,0%
 l10n/po/ja_JP/_guides/redis-dev-services.adoc.po, 10, 10, 269, 269 ,0%
+l10n/po/ja_JP/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc.po, 0, 13, 0, 152 ,100%
 l10n/po/ja_JP/_posts/2021-11-24-quarkus-2-5-0-final-released.adoc.po, 0, 57, 0, 746 ,100%
 l10n/po/ja_JP/_posts/2021-11-23-smallrye-stork-intro.adoc.po, 0, 32, 0, 707 ,100%
 l10n/po/ja_JP/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc.po, 0, 14, 0, 153 ,100%
