Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.9.0 released!'\n"
@@ -34,27 +34,37 @@ msgid ""
 "author: jeffmaury\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus Tools for IntelliJ 1.9.0 released!\n"
+"date: 2021-12-03\n"
+"tags: announcement ide\n"
+"synopsis: 「このリリースでは、新しいプロジェクト/モジュールウィザードでQuarkusストリームのサポートが追加されています。\n"
+"author: jeffmaury\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:13
+#, fuzzy
 msgid "We are very pleased to announce the 1.9.0 release of Quarkus Tools for IntelliJ.  This release adds support for Quarkus streams in the new project/module Quarkus wizard and fixes compatibilities with just released IntelliJ 2021.3."
-msgstr ""
+msgstr "Quarkus Tools for IntelliJの1.9.0リリースを発表できることを大変嬉しく思います。このリリースでは、新しいプロジェクト／モジュールのQuarkusウィザードでQuarkusストリームのサポートが追加され、リリースされたばかりのIntelliJ 2021.3との互換性が修正されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:14
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus streams"
-msgstr ""
+msgstr "クォークス・ストリーム"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:17
+#, fuzzy
 msgid "When a new Quarkus project/module is to be generated, it is now possible to select the Quarkus stream (see https://quarkus.io/blog/quarkus-2x-platform-quarkiverse-registry/[this article]) on which the generated application will be based on."
-msgstr ""
+msgstr "新しいQuarkusプロジェクト／モジュールを生成する際に、生成されるアプリケーションのベースとなるQuarkusのストリーム（ link:https://quarkus.io/blog/quarkus-2x-platform-quarkiverse-registry/[こちらの記事]を参照）を選択できるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:19
+#, fuzzy
 msgid "By default, the recommended (latest release) will be selected but you can choose another one:"
-msgstr ""
+msgstr "デフォルトでは、推奨（最新版）が選択されますが、別のものを選択することもできます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:20
@@ -86,8 +96,9 @@ msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:33
+#, fuzzy
 msgid "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
-msgstr ""
+msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:33
