--- a/l10n/po/ja_JP/_redirects/community.md.po
+++ b/l10n/po/ja_JP/_redirects/community.md.po
@@ -18,18 +18,18 @@ msgstr ""
 
 #. type: YAML Front Matter: external
 #: upstream/_redirects/community.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "true"
-msgstr ""
+msgstr "真"
 
 #. type: YAML Front Matter: newUrl
 #: upstream/_redirects/community.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://github.com/quarkusio/quarkus/discussions"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/discussions"
 
 #. type: YAML Front Matter: permalink
 #: upstream/_redirects/community.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/community/"
-msgstr ""
+msgstr "/community/"
